--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <h3>Linux</h3>
         </div>
         <div class="portafolio">
-            <h2 class="subtittle" id="portafolious">Portafolio</h2>
+            <h2 class="subtittle" id="portafolious">Proyectos realizados</h2>
             <a href="http://"></a>
         </div>
 
@@ -125,7 +125,7 @@
                     <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                         <div>
                             <h5 class="pink-text"><i style="margin:5px" class="fas fa-desktop"></i>Gdesign</h5>
-                            <h3 class="card-title pt-2"><strong>Portafolio de diseño para distintos negocios</strong></h3>
+                            <h3 class="card-title pt-2"><strong>diseños realizados a distintos negocios</strong></h3>
                             <a href="https://drive.google.com/open?id=0B75IBr2ISlcoc0xTN2tQTkphNTQ" target="_blank" class="btn btn-pink"><i
                                     class="fas fa-clone left"></i> Ver Carpeta</a>
                         </div>
