--- a/index.html
+++ b/index.html
@@ -79,13 +79,7 @@
     <div class="container">
         <div class="cuadroconocimento">
             <h2 class="subtittle">Tecnologias Que utilizamos</h2>
-            <h4>HTML-CSS-JS</h4>
-            <h4>Wordpress</h4>
-            <h4>Ps6-Illustrator</h4>
-            <h3>Angular2+</h3>
-            <h3>Firebase</h3>
-            <h3>Git-Github</h3>
-            <h3>Linux</h3>
+            <h4>nos enfocamos a utilizar las ultimas y mas modernas atecnologias, para que tu sitio luzca lo mejor posible pensando en el hoy y mañana</h4>
         </div>
         <div class="portafolio">
             <h2 class="subtittle" id="portafolious">Proyectos realizados</h2>
@@ -105,7 +99,7 @@
                     <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                         <div>
                             <h5 class="red-text"><i style="margin:5px" class="fas fa-desktop"></i>Gdesign</h5>
-                            <h3 class="card-title pt-2"><strong>Proyecto realizado con Angular y FIrebase</strong></h3>
+                            <h3 class="card-title pt-2"><strong>web app con tecnologias modernas</strong></h3>
                             <a href="http://www.pruebaghost.ml" target="_blank" class="btn btn-red"><i
                                     class="fas fa-clone left"></i> Ver Proyecto</a>
                         </div>
