--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="container">
         <div class="cuadroconocimento">
             <h2 class="subtittle">Tecnologias Que utilizamos</h2>
-            <h4>nos enfocamos a utilizar las ultimas y mas modernas atecnologias, para que tu sitio luzca lo mejor posible pensando en el hoy y mañana</h4>
+            <h4>nos enfocamos a utilizar las ultimas y mas modernas tecnologias, para que tu sitio luzca lo mejor posible pensando en el hoy y mañana</h4>
         </div>
         <div class="portafolio">
             <h2 class="subtittle" id="portafolious">Proyectos realizados</h2>
